--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "express": "^4.16.3",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.4.0"
+    "path": "^0.12.7",
+    "request": "^2.85.0"
   }
 }
